--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
-    "next": "16.0.0",
+    "next": "^16.1.6",
     "papaparse": "^5.5.3",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "recharts": "^3.3.0",
     "zod": "^4.1.12"
   },
